# obzai

./: .gitignore  LICENSE  README.md  env.yml  pyproject.toml
.github/workflows/: pypi-publish.yml  testpypi-publish.yml
src/obz/client/: api_config.py  credentials.py  logger_config.py  obz_client.py
src/obz/data_inspector/: detector.py  extractor.py  projector.py
src/obz/utils/: image_utils.py
src/obz/xai/: eval_tool.py  xai_regions.py  xai_tool.py  xai_utils.py
tutorials/: data_inspector_local.ipynb  imagenet_classification_cloud.ipynb  lungcancer_classification_cloud.ipynb  xai_tools_local.ipynb
