[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "obzai"
version = "0.0.1"
description = "Monitor, explain, and detect outliers in computer vision AI models."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    {name = "Obz AI", email = "hi@obz.ai"}
]
maintainers = [
    {name = "Jakub Binda", email = "binkuba@gmail.com"},
    {name = "Neo Christopher Chung", email = "nchchung@gmail.com"}
]
dependencies = [
    "torch >= 2.1.0",
    "torchvision >= 0.16",
    "transformers[torch] >= 4.46.1",
    "accelerate>=0.26.0",
    "scipy >= 1.3.1",
    "scikit-learn >= 1.6",
    "scikit-image > 0.23.1",
    "numpy >= 1.23",
    "umap-learn >= 0.5.5",
    "pandas",
    "matplotlib",
    "cmasher",
    "tqdm",
    "requests",
    "pillow",
    "captum >= 0.7.0",
    "ipywidgets",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/obzai/obzai.git"

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
